[tool.poetry]
name = "pure"
version = "0.1.0"
description = ""
authors = ["pablobuenaposada <pablo.buenaposada@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.7"
django-extensions = "^3.2.3"
pillow = "^10.4.0"
psycopg2-binary = "^2.9.9"
django-environ = "^0.11.2"
requests = "^2.32.3"
faker = "^26.0.0"
django-rq = "^2.10.2"


[tool.poetry.group.dev.dependencies]
black = "*"
ruff = "*"
pytest = "*"
pytest-django = "*"
model-bakery = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py312"
lint.select = [
    "F", # Pyflakes
    "E", # pycodestyle
    "W", # Warning
    "C90", # mccabe
    "I",  # isort
    "B", # flake8-bugbear
    "C4", # flake8-comprehensions
    "T10", # flake8-debugger
    "ISC", # flake8-implicit-str-concat
    "ICN", # flake8-import-conventions
    "PIE", # flake8-pie
    "Q", # flake8-quotes
    "SIM", # flake8-simplify
    "PGH", # pygrep-hooks
    "PLE", # Error
    "PLW", # Warning
    "RSE", # flake8-raise
]
lint.ignore = [
    "E501",
]
exclude = ["migrations"]

[tool.black]
exclude = '''
/(
    migrations
)/
'''